The Wordle component has been enhanced with a colored feedback feature. charMap was optimized using useMemo to precompute the letter frequencies of the target word (wordle). The PreviousGuessSub component was updated to mark each guessed letter green if it matches the correct position in the target word and yellow if it is present in the target word but in the wrong position. A cMap copy was used to prevent excess letters from being incorrectly marked as yellow. The PreviousGuess component was expanded to accept wordle and charMap props.

--- a/wordle/components/Wordle.module.css
+++ b/wordle/components/Wordle.module.css
@@ -1,5 +1,5 @@
 .cell{
-    border:1px solid black;
+    border:1px solid yellowgreen;
     width:45px;
     height:45px;
     margin:2px;
@@ -14,4 +14,12 @@
     display:flex;
     align-items: center;
     justify-content: center;
+}
+
+.green{
+    background-color:limegreen;
+}
+
+.yellow{
+    background-color: yellowgreen;
 }
